ready to first deployment

--- a/templates/pages/home/includes/blog_area.html
+++ b/templates/pages/home/includes/blog_area.html
@@ -2,8 +2,8 @@
 <section class="blog-wrap-layout4 bg-light-secondary100 pt-0">
     <div class="container">
         <div class="section-heading heading-dark text-center heading-layout1">
-            <h2><a href="{% url 'blog' %}" class="text-dark">Our Latest News</a></h2>
-            <p>Eimply dummy text of the printing and typesetting industry industry's standard</p>
+            <h2><a href="{% url 'blog' %}" class="text-dark">Ən Yeni Məqalələr</a></h2>
+            <p>Son 3 məqaləmiz</p>
         </div>
         <div class="row">
             {% for article in articles %}
