--- a/templates/pages/contact/contact.html
+++ b/templates/pages/contact/contact.html
@@ -32,7 +32,7 @@
                     <div class="contact-info">
                         <ul>
                             <li><i class="fas fa-map-marker-alt"></i>Bakı şəhəri, 9-cu mikrorayon., Mir Cəlal küç., 51 C</li>
-                            <li><i class="far fa-envelope"></i>example@example.com</li>
+                            <li><i class="far fa-envelope"></i>info@elmed.az</li>
                             <li><i class="fas fa-phone"></i>(+994)-77-303-41-14</li>
                         </ul>
                     </div>
