--- a/templates/layouts/main_layout/includes/footer.html
+++ b/templates/layouts/main_layout/includes/footer.html
@@ -18,7 +18,7 @@
                             <ul>
                                 <li><i class="fas fa-map-marker-alt"></i>Bakı şəhəri, 9-cu mikrorayon., Mir Cəlal küç., 51 C</li>
                                 <li><i class="fas fa-phone"></i>(+994)-77-303-41-14</li>
-                                <li><i class="far fa-envelope"></i>medilink@gmail.com</li>
+                                <li><i class="far fa-envelope"></i>info@elmed.az</li>
                             </ul>
                         </div>
                     </div>
