--- a/templates/layouts/main_layout/includes/footer.html
+++ b/templates/layouts/main_layout/includes/footer.html
@@ -87,7 +87,9 @@
     </section>
     <section class="footer-bottom-wrap d-block pt-1">
         <div class="copyright text-white">Bütün hüquqları qorunur © www.elmed.az <script>document.write(new Date().getFullYear())</script></a></div>
-        <div class="text-white">Developed by <b>Cavad Salman</b></div>
+        <div class="text-white">Developed by <b>Cavad Salman</b>
+            <a href="http://www.djangoproject.com/"><img src="https://www.djangoproject.com/m/img/badges/djangomade124x25.gif" border="0" alt="Made with Django." title="Made with Django." /></a>
+        </div>
         <div class="text-white">Content by "R.G Company MMC"</div>
     </section>
 </footer>
