add appointment to home

--- a/templates/pages/home/includes/action_area.html
+++ b/templates/pages/home/includes/action_area.html
@@ -12,14 +12,14 @@
             <div class="col-lg-4 col-12 px-2">
                 <div class="call-to-action-box-layout3">
                     <div class="single-item mt-2 mt-md-0">
-                        <a href="https://goo.gl/maps/CFSey3fGoYJX4mtm9" target="_blank"><i class="fas fa-map-marker-alt"></i> Ünvana Bax</a>
+                        <a href="{% url 'appointment' %}"><i class="fas fa-calendar-alt"></i> Onlayn Randevu</a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-12 px-2">
                 <div class="call-to-action-box-layout3">
                     <div class="single-item mt-2 mt-md-0">
-                        <a href="{% url 'campaign-list' %}"><i class="far fa-calendar-alt"></i> Kampaniyalar</a>
+                        <a href="{% url 'campaign-list' %}"><i class="fas fa-bullhorn"></i> Kampaniyalar</a>
                     </div>
                 </div>
             </div>
